--- a/src/NavHeader/navHeader.module.css
+++ b/src/NavHeader/navHeader.module.css
@@ -1,6 +1,7 @@
 .navBar {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 2rem;
 }
 .link {
     padding: 1rem 2rem;
